--- a/app/src/main/res/layout/activity_qrcode_list.xml
+++ b/app/src/main/res/layout/activity_qrcode_list.xml
@@ -6,12 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".QRCodeList">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ListView
+        android:id="@+id/qrListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
