Changed student array to student list, and changed to correct barcode standard

--- a/app/src/main/res/layout/activity_qrcode_list.xml
+++ b/app/src/main/res/layout/activity_qrcode_list.xml
@@ -8,6 +8,19 @@
 
     <ListView
         android:id="@+id/qrListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="411dp"
+        android:layout_height="616dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="115dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="313dp"
+        android:layout_height="59dp"
+        android:text="Grade Exams"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.048" />
 </androidx.constraintlayout.widget.ConstraintLayout>
