--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -13,7 +13,7 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
+        android:layout_width="187dp"
         android:layout_height="64dp"
         android:layout_weight="1" />
 </LinearLayout>
