--- a/app/src/main/res/layout/activity_qrcode_list.xml
+++ b/app/src/main/res/layout/activity_qrcode_list.xml
@@ -10,8 +10,12 @@
         android:id="@+id/qrListView"
         android:layout_width="411dp"
         android:layout_height="616dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="115dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button"
