--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -7,9 +7,11 @@
         android:id="@+id/textView3"
         android:layout_width="282dp"
         android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
         android:layout_weight="1"
         android:text="TextView"
         android:textSize="48sp" />
+
 
     <ImageView
         android:id="@+id/imageView2"
