--- a/app/src/main/res/layout/activity_qrcode_list.xml
+++ b/app/src/main/res/layout/activity_qrcode_list.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/gradeExamBtn"
         android:layout_width="167dp"
         android:layout_height="42dp"
         android:text="Grade Exams"
