--- a/app/src/main/res/layout/activity_class_roster.xml
+++ b/app/src/main/res/layout/activity_class_roster.xml
@@ -31,28 +31,30 @@
         app:layout_constraintVertical_bias="0.521" />
 
     <Button
-        android:id="@+id/buttonAdd"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:text="Add Exam"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961" />
-
-    <Button
         android:id="@+id/buttonGrade"
         android:layout_width="150dp"
         android:layout_height="60dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="12dp"
         android:text="Grade Exams"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.938"
+        app:layout_constraintTop_toBottomOf="@+id/studentListView"
+        app:layout_constraintVertical_bias="0.052" />
+
+    <Button
+        android:id="@+id/buttonAdd"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
+        android:text="Add Exam"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonGrade"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/studentListView"
-        app:layout_constraintVertical_bias="0.446" />
+        app:layout_constraintVertical_bias="0.105" />
 
     <TextView
         android:id="@+id/textViewQRResult"
