--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -27,13 +27,13 @@
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="text"
-      android:text="Username"
+      android:text="Email"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.492"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.567" />
+      app:layout_constraintVertical_bias="0.428" />
 
   <EditText
       android:id="@+id/editTextPassword"
@@ -48,18 +48,19 @@
       app:layout_constraintHorizontal_bias="0.492"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.69" />
+      app:layout_constraintVertical_bias="0.571" />
 
   <TextView
       android:id="@+id/textViewUsername"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Username"
+      android:text="Email"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.285"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.372" />
 
   <TextView
       android:id="@+id/textViewPassword"
@@ -70,8 +71,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.283"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.623" />
+      app:layout_constraintTop_toTopOf="parent" />
 
   <Button
       android:id="@+id/buttonRegister"
@@ -80,34 +80,35 @@
       android:text="Register"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.501"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.827" />
-
-  <TextView
-      android:id="@+id/textViewName"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Name"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.264"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.375" />
+      app:layout_constraintVertical_bias="0.696" />
 
   <EditText
-      android:id="@+id/editTextName"
+      android:id="@+id/editTextCode"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="10"
       android:inputType="text"
-      android:text="Name"
+      android:text="Code"
+      android:visibility="invisible"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.492"
+      app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.435" />
+      app:layout_constraintVertical_bias="0.839" />
+
+  <Button
+      android:id="@+id/buttonConfirm"
+      android:visibility="invisible"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Confirm"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.947" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
