We now fetch inputs, authentication works

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -80,9 +80,10 @@
       android:text="Register"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.496"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.696" />
+      app:layout_constraintVertical_bias="0.752" />
 
   <EditText
       android:id="@+id/editTextCode"
@@ -110,5 +111,19 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.947" />
+
+  <TextView
+      android:id="@+id/regFailedTxt"
+      android:layout_width="357dp"
+      android:layout_height="62dp"
+      android:autoText="false"
+      android:textAlignment="center"
+      android:textColor="#FF1100"
+      app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.476"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
+      app:layout_constraintVertical_bias="0.233" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
